fix: window height text overflow

--- a/components/sections/programs/pcard/style.css
+++ b/components/sections/programs/pcard/style.css
@@ -1,11 +1,17 @@
 .rectangle {
   width: 95%;
   min-height: 40vh;
-  max-height: 70vh;
+  height: auto;
   stroke: white;
   background-color: transparent;
   outline: 4px solid rgb(236, 236, 236);
   box-shadow: inset 0px 0px 20px rgba(4, 225, 44, 0.8); 
+}
+
+@media (min-height: 600px) {
+  .rectangle {
+    max-height: 70vh;
+  }
 }
 
 .green{
@@ -15,3 +21,4 @@
 .purple{
   box-shadow: inset 0px 0px 100px rgba(179, 0, 255, 0.4);
 }
+
